<resources>
    <string name="app_name">Authentication Practice</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Enter your email</string>
    <string name="pwd_hint">Enter your password</string>
    <string name="register_text">REGISTER</string>
    <string name="login_text">LOGIN</string>
    <string name="register_navigate_text">Click here to Register!</string>
    <string name="LOGIN_PREFS">edu.tacoma.uw.dinhtu.authenticationpractice.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="action_logout">logout</string>
</resources>